--- a/src/Pages/Login.css
+++ b/src/Pages/Login.css
@@ -185,3 +185,94 @@
         transition: 0.3s;
     }
 }
+
+
+.itemfield{
+    width: 50px;
+}
+.backtoregister{
+    background-color: rgb(65, 65, 147);
+    width: 100px;
+    height: 40px;
+    border-radius: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    position: relative;
+    left: 180px;
+    top: 50px;
+}
+    
+
+
+.header{
+    display: flex;
+    border-bottom: solid 1px #b78585;
+    width: 100%;
+    align-items: center;
+    justify-content: space-around;
+    margin-bottom: 25px;
+    padding-bottom: 15px;
+}
+.mainbar{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.content{
+    width: 283px;
+    height: 370px;
+    background-color: white;
+    margin: 10px 10px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #b19f9f;
+    border-radius: 30px;
+    box-shadow: 8px 8px 12px -6px black;
+}
+.content:hover{
+    transform: 0.5;
+}
+.content hr{
+    width: 90%;
+    border: solid 1px #ae9696;
+}
+.imagebar{
+ 
+    width: 228px;
+    height: 264px;
+    border-radius: 30px;
+    border: 1px solid #b19f9f;
+
+}
+.imagefield{
+    width: 220px;
+    height: 258px;
+    border-radius: 30px;
+    margin: 2px 3px;
+}
+.namefield p{
+    margin: 4px;
+    font-size: 20px;
+    font-weight: 500;
+    color: #967373;
+}
+
+#redDiv{
+    width: 50px;
+    height: 50px;
+    background-color: red;
+}
+/* .datadispay{
+
+}
+.domain{
+    
+}
+.description{
+    
+} */
