--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -30,8 +30,8 @@
     justify-content: center;
     color: white;
     position: relative;
-    left: 180px;
-    top: 50px;
+    left: 578px;
+    top: 59px;
 }
 
 
@@ -50,6 +50,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
 }
 
 #content {
@@ -59,7 +60,7 @@
     border: 1px solid #b19f9f;
     border-radius: 30px;
     box-shadow: 8px 8px 12px -6px black;
-    display: flex;
+    margin-top: -340px;
 }
 
 #content:hover {
@@ -73,38 +74,38 @@
 
 #imagebar {
     width: 307px;
-    height: 385px;
-    border-radius: 30px;
+    height: 374px;
+    border-radius: 10px;
     border: 1px solid #b19f9f;
-    margin: 5px 5px;
+    margin: 8px 5px;
 
 }
 
 #imagefield {
-    width: 299px;
-    height: 378px;
-    border-radius: 30px;
-    margin: 2px 3px;
+    width: 298px;
+    height: 365px;
+    border-radius: 10px;
+    margin: 3px 3px;
 }
 
 #namefield p {
-    margin: 4px;
-    font-size: 20px;
+    font-size: 30px;
     font-weight: 500;
     color: #967373;
+    margin: 16px 37px;
 }
 
 #detailsinpara {
     display: flex;
     flex-direction: column;
-    background-color: red;
     width: 367px;
     height: 374px;
     margin: 10px 4px;
     border-radius: 10px;
+    border: 1px solid #b19f9f;
 }
 
-#backtoregister{
+#backtoregister {
     background-color: rgb(65, 65, 147);
     width: 100px;
     height: 40px;
@@ -114,9 +115,29 @@
     justify-content: center;
     color: white;
     position: relative;
-    left: 180px;
-    top: 50px;
+    top: -278px;
 }
-#namefield{
 
+.imagedetaile {
+    display: flex;
+}
+
+.fielddesc p {
+    background: white;
+    height: 40px;
+    padding: 6px 15px;
+    border: 1px solid #9f3535;
+    border-radius: 5px;
+}
+
+.fielddesc span {
+    font-size: 18px;
+    font-weight: 300;
+    color: #967373;
+}
+
+.fielddesc {
+    margin: 12px;
+    box-shadow: 2px 2px 8px -2px black;
+    border-radius: 5px;
 }
